--- a/index.html
+++ b/index.html
@@ -2,24 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Coming Soon</title>
   <style>
     body {
-      background: #f4f4f4;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      font-family: sans-serif;
-    }
-    h1 {
+      background: #f0f0f0;
       color: #333;
+      font-family: Arial, sans-serif;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0;
+      font-size: 24px;
     }
   </style>
 </head>
 <body>
-  <h1>🚧 Our Website is Coming Soon!</h1>
+  🚧 <strong>Website Under Construction</strong>
 </body>
 </html>
